2010-05-14  Antoine Vandecreme  <avandecreme@sopragroup.com>

	* ReviewLinqMethodRule.cs: Fix the optimisation test
	which was skipping .Net 3.5 assemblies.

2010-04-28  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnusedParametersRule.cs: Ignore methods decorated with a 
	[Conditional] attribute.

2010-04-27  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUncalledPrivateCodeRule.cs: Ignore methods decorated with
	a [Conditional] attribute.
	* AvoidUninstantiatedInternalClassesRule.cs: Ignore internal types
	named NamespaceDoc since they are used by monodoc to include
	namespace-related documentation (suggested by Jesse Jones)

2010-04-13  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidRepetitiveCallsToPropertiesRule.cs: Don't assume a 
	MethodReference for FlowControl.Call. Calli, while uncommon, 
	would provide a CallSite.

2010-01-31  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidRepetitiveCallsToPropertiesRule.cs: Fix false positives on
	long message chains. Make InlineLimit a configurable property.

2010-01-30  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidConcatenatingCharsRule.cs: Apply AvoidMessageChainsRule and 
	make the check safer against names starting with Object*
	* AvoidUncalledPrivateCodeRule.cs: Apply AvoidRepetitive
	CallsToPropertiesRule
	* AvoidUninstantiatedInternalClassesRule.cs: Apply AvoidRepetitive
	CallsToPropertiesRule
	* AvoidUnneededCallsOnStringRule.cs: Apply PreferEmptyInstanceOver
	NullRule
	* AvoidUnneededUnboxingRule.cs: Apply PreferEmptyInstanceOverNullRule
	* AvoidUnsealedUninheritedInternalClassesRule.cs: Apply Avoid
	RepetitiveCallsToPropertiesRule
	* AvoidUnusedParametersRule.cs: Apply AvoidRepetitiveCallsTo
	PropertiesRule
	* MathMinMaxCandidateRule.cs: Apply PreferEmptyInstanceOverNullRule
	* PreferCharOverloadRule.cs: Apply AvoidRepetitiveCallsToProperties
	Rule and add extra HasParameters check
	* RemoveUnusedLocalVariablesRule.cs: Apply AvoidRepetitiveCallsTo
	PropertiesRule
